CIND820_Capstone_2016DA_New/CertifIcateProject_Pro/GpMessages/19395015629800
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: April 7, 2023 11:10:56 PM</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    if u"0.799" int(u"0.799") else 0
    ^
SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at April 7, 2023 11:10:57 PM (Elapsed Time: 0.62 seconds)</msg></messages>